# effective-lamp

./: .gitignore  Cargo.toml  README  setup_rust_tools.sh
.github/workflows/: rust.yml
WebClient/: Cargo.toml
drive_client/: Cargo.toml  demo_output.json  json_result.json
drive_client/src/: main.rs
result/: sric_curriculum.json
src/: main.rs
tauri/: README.md  Sunny_(1984).jpg~  package-lock.json  package.json
tauri/images/: weather_background.png~
tauri/src/: App.vue
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
web_client/: Cargo.toml
web_client/src/: main.rs
