[package]
name = "effective_lamp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
reqwest = {version = "*", features = ["json"]}
tokio = {version = "1", features = ["full"]}
anyhow = "*"
yup-oauth2 = "*"
image = "*"
curl = "*"
csv_to_json = "1.0.2"
